--- a/index.html
+++ b/index.html
@@ -7,117 +7,72 @@
   <meta name="description" content="도움은 본능, 연결은 선택. Project.PAW는 구조자와 후원자를 직접 연결하는 따뜻한 플랫폼입니다.">
   <style>
     :root{
-      --primary:#1f6feb; --ink:#0b1220; --muted:#8ea0c8; --muted-2:#a8b3cf;
+      --primary:#1f6feb; --ink:#e6ecff; --muted:#9aa8c7;
       --bg:#0a0f1d; --surface:#0f1629; --surface-2:#0c1224; --line:#1a2342;
-      --radius:20px; --shadow:0 18px 50px rgba(10,15,29,.42);
-      --glow: radial-gradient(50% 60% at 80% 0%, rgba(84,132,255,.28) 0%, rgba(84,132,255,0) 65%),
-              radial-gradient(45% 50% at 10% 90%, rgba(72,226,173,.18) 0%, rgba(72,226,173,0) 60%);
+      --radius:16px; --shadow:0 14px 34px rgba(10,15,29,.36);
     }
     *{box-sizing:border-box}
-    html,body{margin:0;background:var(--bg);color:#e6ecff;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto}
+    html,body{margin:0;background:var(--bg);color:var(--ink);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto}
     a{text-decoration:none;color:inherit}
+    .clamp-1{display:-webkit-box;-webkit-line-clamp:1;-webkit-box-orient:vertical;overflow:hidden}
+    .clamp-2{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
 
     /* Topbar */
-    .topbar{
-      position:fixed; top:0; inset-inline:0; z-index:50;
-      backdrop-filter:saturate(160%) blur(8px);
-      background:color-mix(in oklab, #0a0f1d 85%, transparent);
-      border-bottom:1px solid #111a33;
-    }
-    .topbar .inner{max-width:1200px;margin:0 auto;padding:14px 16px;display:flex;align-items:center;justify-content:space-between}
+    .topbar{position:fixed;top:0;left:0;right:0;z-index:50;background:#0b1222e6;border-bottom:1px solid #111a33;backdrop-filter:blur(6px)}
+    .topbar .inner{max-width:1120px;margin:0 auto;padding:10px 14px;display:flex;align-items:center;justify-content:space-between}
     .brand{font-weight:900;letter-spacing:.2px}
     .nav{display:flex;gap:8px}
-    .btn{appearance:none;border:0;border-radius:12px;padding:10px 14px;font-weight:700;cursor:pointer}
-    .btn.ghost{background:#ffffff12;color:#dbeafe;border:1px solid #ffffff14}
-    .btn.primary{background:var(--primary);color:#fff;box-shadow:0 8px 24px rgba(31,111,235,.35)}
-    .btn.ghost:hover{background:#ffffff1f}
-    .btn.primary:hover{filter:brightness(1.05)}
+    .btn{appearance:none;border:0;border-radius:10px;padding:9px 12px;font-weight:700;cursor:pointer}
+    .btn.ghost{background:#ffffff12}
+    .btn.primary{background:var(--primary);color:#fff}
 
-    /* Hero - Full viewport (전화면) */
+    /* Hero (압축) */
     .hero{
-      min-height:100svh; display:grid; place-items:center; padding-top:82px; /* space for topbar */
-      background:
-        radial-gradient(1200px 600px at 70% -10%, #112149 0%, transparent 60%),
-        radial-gradient(800px 600px at -10% 90%, #0c2130 0%, transparent 60%),
-        var(--glow);
+      min-height:70svh; display:grid; place-items:center; padding-top:64px;
+      background: radial-gradient(900px 480px at 70% -10%, #112149 0%, transparent 60%), radial-gradient(600px 480px at -10% 90%, #0c2130 0%, transparent 60%);
     }
-    .hero-inner{max-width:1200px; width:100%; padding:28px 16px; display:grid; grid-template-columns:1.08fr .92fr; gap:24px}
-    @media (max-width: 980px){ .hero-inner{grid-template-columns:1fr; gap:18px} }
+    .hero-inner{max-width:1120px;width:100%;padding:18px 14px;display:grid;grid-template-columns:1.05fr .95fr;gap:16px}
+    @media (max-width: 960px){ .hero-inner{grid-template-columns:1fr} }
 
-    .panel{
-      background:linear-gradient(180deg, var(--surface), var(--surface-2));
-      border:1px solid var(--line);
-      border-radius:28px; box-shadow:var(--shadow); position:relative; overflow:hidden
-    }
-    .panel::after{
-      content:""; position:absolute; inset:0; pointer-events:none;
-      background: radial-gradient(420px 220px at 12% 10%, rgba(255,255,255,.06), transparent 60%);
-      mix-blend:screen;
-    }
-    .pad{padding:28px}
+    .panel{background:linear-gradient(180deg,var(--surface),var(--surface-2));border:1px solid var(--line);border-radius:20px;box-shadow:var(--shadow);overflow:hidden}
+    .pad{padding:18px}
+    .kicker{font-size:11px;letter-spacing:.12em;text-transform:uppercase;color:#90a0c0;font-weight:800;margin-bottom:6px}
+    .t-hero{font-size:clamp(24px,4vw,40px);line-height:1.1;font-weight:900;margin:0}
+    .subtitle{color:var(--muted);font-size:15px;margin:8px 0 0}
+    .pills{display:flex;gap:6px;flex-wrap:wrap;margin-top:10px}
+    .pill{padding:6px 10px;border-radius:999px;background:#0e2039;border:1px solid #1c2a4d;color:#bcd0ff;font-weight:800;font-size:12px}
+    .cta{display:flex;gap:8px;flex-wrap:wrap;margin-top:12px}
+    .cta .btn{padding:10px 12px;border-radius:10px}
 
-    /* Hero Copy */
-    .t-hero{font-size:clamp(30px,4.6vw,56px); line-height:1.05; font-weight:900; margin:0 0 10px 0; letter-spacing:.2px}
-    .accent{color:#cfe0ff; text-shadow:0 8px 32px rgba(91,136,255,.35)}
-    .subtitle{color:var(--muted-2); font-size:17px; margin:10px 0 0 0}
-    .kicker{font-size:12px; letter-spacing:.12em; text-transform:uppercase; color:#90a0c0; font-weight:800; margin-bottom:10px}
-
-    .pills{display:flex; flex-wrap:wrap; gap:8px; margin-top:14px}
-    .pill{display:inline-flex; align-items:center; gap:8px; padding:8px 12px; border-radius:999px;
-      background:#0e2039; border:1px solid #1c2a4d; color:#bcd0ff; font-weight:800; font-size:13px}
-    .pill svg{width:16px;height:16px;opacity:.9}
-
-    .cta{display:flex; gap:10px; flex-wrap:wrap; margin-top:16px}
-    .cta .btn{padding:12px 16px; border-radius:14px}
-
-    /* Cards */
-    .grid{display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:16px}
-    .card{background:linear-gradient(180deg, #0f1629, #0d1527); border:1px solid #1b2547; border-radius:18px; overflow:hidden; transition:transform .12s ease, box-shadow .12s ease}
-    .card:hover{transform:translateY(-2px); box-shadow:0 14px 36px rgba(22,35,78,.5)}
-    .media{position:relative; background:#0a1020; border-bottom:1px solid #1b2547}
-    /* Aspect-ratio frame: keeps thumbnails uniform across random sizes */
-    .media::before{content:""; display:block; padding-top:56.25%;} /* 16:9 */
-    .media > img{
-      position:absolute; inset:0; width:100%; height:100%;
-      object-fit:cover; object-position:center 35%;
-    }
-    /* If you want NO crop globally, set mediaFit='contain' in script. */
-    .media[data-fit="contain"] > img{ object-fit:contain; background:#0a1020 }
-
-    .body{padding:14px 14px 16px}
-    .row{display:flex; gap:10px; align-items:center; justify-content:space-between}
-    .title-sm{margin:0; font-size:18px; color:#ecf0ff}
+    /* Cards (4:3, 컴팩트) */
+    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(240px,1fr));gap:12px}
+    .card{background:linear-gradient(180deg,#0f1629,#0d1527);border:1px solid #1b2547;border-radius:16px;overflow:hidden;transition:transform .12s ease, box-shadow .12s}
+    .card:hover{transform:translateY(-2px);box-shadow:0 12px 30px rgba(22,35,78,.48)}
+    .media{position:relative;background:#0a1020;border-bottom:1px solid #1b2547}
+    .media::before{content:"";display:block;padding-top:75%} /* 4:3 */
+    .media > img{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;object-position:center 38%}
+    .body{padding:12px}
+    .row{display:flex;gap:8px;align-items:center;justify-content:space-between}
+    .title-sm{margin:0;font-size:16px}
     .muted{color:#9aa8c7}
-    .badge{font-size:12px; padding:4px 8px; border-radius:999px}
-    .badge.approved{background:#09291a; color:#4ae39b; border:1px solid #153a27}
-    .badge.pending{background:#2a1e05; color:#ffcc6b; border:1px solid #3e2b08}
-    .progress{width:100%; height:8px; background:#111a33; border-radius:999px; overflow:hidden; margin:10px 0 6px; border:1px solid #1e2b50}
-    .progress i{display:block; height:100%; background:linear-gradient(90deg, #4f7fff, #6bd3ff); width:0%}
-
-    .empty{
-      padding:24px; text-align:center; border:1px dashed #344065; border-radius:16px; color:#9aa8c7; background:#0b1224
-    }
+    .badge{font-size:11px;padding:3px 7px;border-radius:999px}
+    .badge.approved{background:#09291a;color:#4ae39b;border:1px solid #153a27}
+    .badge.pending{background:#2a1e05;color:#ffcc6b;border:1px solid #3e2b08}
+    .progress{width:100%;height:6px;background:#111a33;border-radius:999px;overflow:hidden;margin:8px 0 4px;border:1px solid #1e2b50}
+    .progress i{display:block;height:100%;background:linear-gradient(90deg,#4f7fff,#6bd3ff);width:0%}
 
     /* Section spacing */
-    .section{max-width:1200px; margin:0 auto; padding:0 16px 40px}
-
-    /* How it works */
-    .steps{display:grid; grid-template-columns:repeat(3,1fr); gap:14px}
-    @media (max-width: 820px){ .steps{grid-template-columns:1fr} }
-    .step{background:linear-gradient(180deg, #0f1629, #0d1527); border:1px solid #1b2547; border-radius:16px; padding:16px}
-    .step h3{margin:0 0 6px 0; font-size:16px}
-    .step p{margin:0; color:#9aa8c7; line-height:1.6}
+    .section{max-width:1120px;margin:0 auto;padding:0 14px 24px}
 
     /* Footer */
-    footer{border-top:1px solid #111a33; background:#0a0f1d}
-    .footer-inner{max-width:1200px; margin:0 auto; padding:22px 16px; display:flex; justify-content:space-between; align-items:center; color:#7f8fb3; font-size:14px}
-    .footer-nav{display:flex; gap:12px}
+    footer{border-top:1px solid #111a33;background:#0a0f1d}
+    .footer-inner{max-width:1120px;margin:0 auto;padding:16px 14px;display:flex;justify-content:space-between;align-items:center;color:#7f8fb3;font-size:13px}
+    .footer-nav{display:flex;gap:10px}
     .footer-link{color:#9aa8c7}
   </style>
 </head>
 <body>
-  <!-- Topbar -->
-  <header class="topbar" role="navigation" aria-label="주요">
+  <header class="topbar">
     <div class="inner">
       <a class="brand" href="index.html">Project.PAW</a>
       <nav class="nav">
@@ -127,70 +82,49 @@
     </div>
   </header>
 
-  <!-- Hero (전화면) -->
   <section class="hero">
     <div class="hero-inner">
-      <!-- Left: Philosophy -->
       <div class="panel pad">
         <div class="kicker">운영철학</div>
-        <h1 class="t-hero">도움은 본능, <span class="accent">연결</span>은 선택.</h1>
-        <p class="subtitle">
-          망설임을 <b>용기</b>로 바꾸는 플랫폼. <br/>
-          책임의 끝과 공감의 시작이 만나는 곳. <br/>
-          <b>숫자보다 감정</b>을 더 소중히 여깁니다.
-        </p>
-
+        <h1 class="t-hero">도움은 본능, 연결은 선택.</h1>
+        <p class="subtitle">망설임을 <b>용기</b>로, 숫자보다 <b>감정</b>을. 책임의 끝과 공감의 시작이 만나는 곳.</p>
         <div class="pills">
-          <span class="pill">
-            <!-- paw icon -->
-            <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M7.5 10c1.2 0 2.2-1.35 2.2-3s-1-3-2.2-3S5.3 5.35 5.3 7s1 3 2.2 3Zm4.3-1.5c1.3 0 2.3-1.35 2.3-3s-1-3-2.3-3-2.3 1.35-2.3 3 1 3 2.3 3Zm4.7 1.5c1.2 0 2.2-1.35 2.2-3s-1-3-2.2-3-2.2 1.35-2.2 3 1 3 2.2 3ZM6.5 12.5c-2.5 1.8-3.2 5.1-1.1 6.8 1.6 1.3 3.5.7 5.1-.4 1.5-1 3.8-1.1 5.4 0 1.6 1.1 3.4 1.7 5.1.4 2.1-1.7 1.4-5-1.1-6.8-2.1-1.5-5.4-1.5-6.7-.2-1.3-1.3-4.6-1.3-6.7.2Z"/></svg>
-            발바닥 하나 = 마음 하나
-          </span>
-          <span class="pill">100% 전달</span>
-          <span class="pill">구조자 30% 책임</span>
-          <span class="pill">직접 연결</span>
+          <span class="pill">100% 전달</span><span class="pill">구조자 30% 책임</span><span class="pill">직접 연결</span>
         </div>
-
         <div class="cta">
-          <a class="btn primary" href="project_list.html" aria-label="후원 가능한 프로젝트 보기">후원하기</a>
-          <a class="btn ghost" href="create.html" aria-label="새 프로젝트 등록">등록하기</a>
+          <a class="btn primary" href="project_list.html">후원하기</a>
+          <a class="btn ghost" href="create.html">등록하기</a>
         </div>
       </div>
 
-      <!-- Right: Featured Projects -->
       <div class="panel pad">
-        <div class="kicker">지금 진행중</div>
-        <h2 style="margin:0 0 10px 0">추천 프로젝트</h2>
-        <div id="home-cards" class="grid" style="margin-top:8px"></div>
-        <div style="margin-top:12px;display:flex;justify-content:flex-end">
+        <div class="row" style="justify-content:space-between">
+          <div class="kicker">지금 진행중</div>
           <a class="btn ghost" href="project_list.html">모두 보기</a>
         </div>
+        <div id="home-cards" class="grid" style="margin-top:8px"></div>
       </div>
     </div>
   </section>
 
-  <!-- How it works (PG 전 플로우) -->
   <section class="section">
-    <div style="max-width:1200px;margin:0 auto">
-      <div class="kicker">어떻게 연결되나요</div>
-      <div class="steps">
-        <div class="step">
-          <h3>1. 후원 등록</h3>
-          <p>구조자가 상황·금액·사진을 등록합니다.</p>
-        </div>
-        <div class="step">
-          <h3>2. 관리자 승인</h3>
-          <p>검토 후 승인되면 <b>오픈채팅 링크</b>가 입력됩니다.</p>
-        </div>
-        <div class="step">
-          <h3>3. 직접 연결</h3>
-          <p>후원자는 카카오 오픈채팅으로 구조자와 직접 연결됩니다.</p>
-        </div>
+    <div class="kicker">어떻게 연결되나요</div>
+    <div class="grid" style="grid-template-columns:repeat(3,1fr);gap:12px">
+      <div class="panel pad">
+        <strong>1. 후원 등록</strong>
+        <p class="muted" style="margin:6px 0 0">구조자가 상황·금액·사진을 등록합니다.</p>
+      </div>
+      <div class="panel pad">
+        <strong>2. 관리자 승인</strong>
+        <p class="muted" style="margin:6px 0 0">승인 시 <b>오픈채팅 링크</b>가 입력됩니다.</p>
+      </div>
+      <div class="panel pad">
+        <strong>3. 직접 연결</strong>
+        <p class="muted" style="margin:6px 0 0">후원자는 카톡 오픈채팅으로 구조자와 직접 연결됩니다.</p>
       </div>
     </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <div class="footer-inner">
       <span>© Project.PAW — “발바닥 하나가, 마음 하나다.”</span>
@@ -201,39 +135,26 @@
     </div>
   </footer>
 
-  <!-- Logic -->
   <script type="module">
     import "./js/firebase.js";
     import { storage, fmt } from "./js/app.js";
     import { percent, esc } from "./js/utils.js";
 
     const wrap = document.querySelector("#home-cards");
-
-    // Skeleton shimmer while loading
-    const skeletons = () => {
-      wrap.innerHTML = Array.from({ length: 4 }).map(()=>`
-        <div class="card">
-          <div class="media"></div>
-          <div class="body">
-            <div class="row"><h3 class="title-sm" style="opacity:.4">Loading…</h3><span class="badge pending">…</span></div>
-            <p class="muted" style="margin:6px 0; opacity:.6">로딩 중</p>
-            <div class="progress"><i style="width:0%"></i></div>
-            <div class="muted" style="display:flex;gap:12px;opacity:.6"><span>—</span><span>—</span></div>
-          </div>
-        </div>
-      `).join("");
-    };
-
-    // Uniform frame behavior: change 'cover' to 'contain' for global letterbox look
-    const mediaFit = "cover"; // "cover" | "contain"
-
     const createdAtSec = x => (x && typeof x==='object' && 'seconds' in x) ? x.seconds : 0;
+
+    function skeletons(){
+      wrap.innerHTML = Array.from({ length: 4 }).map(()=>`
+        <div class="card"><div class="media"></div><div class="body">
+          <div class="row"><h3 class="title-sm" style="opacity:.5">Loading…</h3><span class="badge pending">…</span></div>
+          <p class="muted" style="margin:4px 0;opacity:.6">로딩 중</p>
+          <div class="progress"><i style="width:0%"></i></div>
+        </div></div>`).join("");
+    }
 
     async function render(){
       skeletons();
       let list = await storage.getAll();
-
-      // home은 기본 '승인된 것' 우선 노출 → 없으면 최신순으로 대체
       const approved = list.filter(p => p.status === "approved");
       list = (approved.length ? approved : list)
         .sort((a,b)=> createdAtSec(b.createdAt) - createdAtSec(a.createdAt))
@@ -248,17 +169,15 @@
 
         return `
           <a class="card" href="project.html?id=${encodeURIComponent(p.id)}" aria-label="프로젝트 ${esc(p.title||'')} 상세 보기">
-            <div class="media" ${mediaFit === 'contain' ? 'data-fit="contain"' : ''}>
-              <img src="${cover}" alt="대표 이미지"/>
-            </div>
+            <div class="media"><img src="${cover}" alt="${esc(p.title||'대표 이미지')}" loading="lazy" decoding="async"/></div>
             <div class="body">
               <div class="row">
-                <h3 class="title-sm">${esc(p.title || '이름 미정')}</h3>
+                <h3 class="title-sm clamp-1">${esc(p.title || '이름 미정')}</h3>
                 ${badge}
               </div>
-              <p class="muted" style="margin:6px 0">${esc(p.summary || '')}</p>
+              <p class="muted clamp-2" style="margin:4px 0">${esc(p.summary || '')}</p>
               <div class="progress"><i style="width:${pct}%"></i></div>
-              <div class="muted" style="display:flex;gap:12px">
+              <div class="muted" style="display:flex;gap:10px;font-size:13px">
                 <span>목표 ${fmt(p.targetAmount)}원</span>
                 <span>구조자 ${fmt(p.selfPayAmount)}원</span>
               </div>
@@ -266,13 +185,6 @@
           </a>
         `;
       }).join("");
-
-      if(!list.length){
-        wrap.innerHTML = `
-          <div class="empty">
-            아직 표시할 프로젝트가 없습니다. <br/>첫 프로젝트를 <a href="create.html" style="color:#cfe0ff;text-decoration:underline">등록</a>해보세요.
-          </div>`;
-      }
     }
 
     render();
